source/styles/ui/_overlay.scss
.overlay-element {
	width: 100%;
	height: 100%;
	position: relative;
	overflow: hidden;

	.relative-wrapper {
		position: relative;
		width: 100%;
		height: 100%;
		top: 0;
		left: 0;
		right: 0;
		bottom: 0;

		&:before {
			content: '';
			display: block;
			position: absolute;
			z-index: 1;
			width: 0%;
			height: 100%;
			top: 0;
			left: -50%;
			transform: skew(30deg);
			background-color: $NH_OVERLAY_COLOR;
			mix-blend-mode: multiply;
			opacity: 0.85;
			transition: width $BTN_HOVER_TRANSITION $BTN_HOVER_TRANSITION*0.25 ease-in;
		}

		.img-wrapper {
			position: relative;
			width: 100%;
			height: 100%;
			img {
				width: auto;
				height: auto;
				min-width: 102%;
				min-height: 102%;
				position: absolute;
				left: 50%;
				top: 50%;
				transform: translate(-50%,-50%);
				transition: transform $BTN_HOVER_TRANSITION $BTN_TRANSITION_DELAY ease;
			}
		}

		.header-wrapper {
			position: absolute;
			z-index: 2;
			top: 50%;
			left: 50%;
			text-align: left;
			transform: translate(-50%, -50%);

			&.white {
				color: $WHITE;
				transition: color $BTN_HOVER_TRANSITION $BTN_HOVER_TRANSITION*0.5 ease-in;
			}
			&.voyages-info {
				color: $WHITE;
				width: 100%;
				text-align: center;
				padding: 0 10%;
			}
		}

		.overlay-ribond {
			position: absolute;
			opacity: 0.75;
			top: 0;
			left: 0;
			z-index: 2;
			width: 42%;
			max-width: 270px;
			padding-bottom: 38%;
			background-image: url('#{$url_prefix_full}/assets/images/overlay-ribond.png');
			background-size: 100% auto;
			background-position: left top;
			background-repeat: no-repeat;
			transform: translate(-100%, -100%);
			transition: transform $BTN_HOVER_TRANSITION $BTN_TRANSITION_DELAY ease-in-out;
		}

	}

	&.white {
		.relative-wrapper:before {
			background-color: $WHITE;
			opacity: 1;
			mix-blend-mode: normal;
		}
		}

	&:hover {
		.relative-wrapper {
			&:before {
				width: 250%;
			}
			.img-wrapper {
				img {
					transform: translate(-50%,-50%) scale(1.1);
				}
			}
			.overlay-ribond {
				transform: translate(0%, 0%);
			}
		}

		&.white {
			.relative-wrapper {
				.header-wrapper {
					&.white {
						color: $NH_RED_COLOR
					}
				}
			}
		}
	}

	&.inverted {
		.relative-wrapper {
			&:before {
				left: auto;
				right: -50%;
			}
			.overlay-ribond {
				top: auto;
				bottom: 0;
				left: auto;
				right: 0;
				transform: translate(100%, 100%) rotate(180deg);
				transition: transform $BTN_HOVER_TRANSITION $BTN_TRANSITION_DELAY ease-in-out;
			}
		}
		&:hover {
			.relative-wrapper {
				.overlay-ribond {
					transform: translate(0%, 0%) rotate(180deg);
				}
			}
		}
	}
	&.no-ribond {
		.relative-wrapper {
			.overlay-ribond {
				display: none;
			}
		}
	}

}

.hotel-item {
	position: relative;
	width: 169px;
	display: block;

	.anchor-wrapper {
		width: 100%;
		height: 100%;
		display: block;
	}

	.image-wrapper {
		position: relative;
		width: 100%;
		padding-bottom: 100%;
		background-color: #CCC;
		overflow: hidden;
		img {
			position: absolute;
			top: 0;
			left: 0;
			right: 0;
			width: 100%;
			height: auto;
		}
		&:before {
			content: '';
			display: block;
			position: absolute;
			z-index: 1;
			width: 0%;
			height: 100%;
			top: 0;
			left: -30%;
			transform: skew(30deg);
			background-color: $NH_RED_COLOR;
			mix-blend-mode: multiply;
			// opacity: 0.75;
			transition: width $BTN_HOVER_TRANSITION $BTN_HOVER_TRANSITION*0.25 ease-in;
		}
	}
	.info-wrapper {
		.caption {
			color: $NH_BROWN_COLOR;
			padding: 15px 0 10px 0;
			margin: 0 !important;
		}

		hr.ribond {
			width: 40px;
			margin: 0 auto;
			border: solid 1px $NH_RED_COLOR;
			transition: width $BTN_HOVER_TRANSITION ease-in;
		}
	}

	&:hover {
		.image-wrapper {
			&:before {
				width: 160%;
			}
		}
		.info-wrapper {
			hr.ribond {
				width: 20px;
			}
		}
	}
}

.video-list-item {
	width: 400px;
	height: 350px;
	.relative-wrapper {
		position: relative;
		width: 100%;
		height: 100%;
		overflow: hidden;
		.img-wrapper {
			position: relative;
			width: 100%;
			height: 100%;
			img {
				width: auto;
				height: auto;
				min-width: 102%;
				min-height: 102%;
				position: absolute;
				left: 50%;
				top: 50%;
				transform: translate(-50%,-50%);
			}
		}
		.absolute-wrapper {
			position: absolute;
			top: 50%;
			width: 100%;
			text-align: center;
			color: $WHITE;
			transform: translateY(-50%);
			.container {
				position: relative;
					.label-font {
					&:first-child {
						opacity: 0.75;
					}
				}
				.block-button {
					margin-top: 10px;
				}
			}
		}
	}
}

